CHANGE - Login page
-Remade login/register page

--- a/proyecto-final-frontend/src/index.html
+++ b/proyecto-final-frontend/src/index.html
@@ -3,7 +3,7 @@
 
 <head>
   <meta charset="utf-8" />
-  <title>Ionic App</title>
+  <title>Gatibanco</title>
 
   <base href="/" />
   <script src="https://kit.fontawesome.com/64d58efce2.js" crossorigin="anonymous"></script>
